apps/jellyfin/env/k3s-cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  namespace: jellyfin
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "jellyfin.edward.sydney"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
    - host: "jellyfin.local"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
